Java 16 maven shade fix